// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopCitiesRealtime when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <figure
    class="loaded"
    data-refresh="15"
    data-source="http://www.example.com/data//top-cities-realtime.json"
    id="chart_top-cities-90-days"
  >
    <div
      class="data bar-chart"
    >
      <div
        class="bin"
      >
        <div
          class="label"
        >
          New York
        </div>
        <div
          class="value"
        >
          19.4%
        </div>
        <div
          class="bar"
          style="width: 19.4%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Chicago
        </div>
        <div
          class="value"
        >
          14%
        </div>
        <div
          class="bar"
          style="width: 14.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Atlanta
        </div>
        <div
          class="value"
        >
          9%
        </div>
        <div
          class="bar"
          style="width: 9.0%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Dallas
        </div>
        <div
          class="value"
        >
          8.9%
        </div>
        <div
          class="bar"
          style="width: 8.9%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Ashburn
        </div>
        <div
          class="value"
        >
          8.2%
        </div>
        <div
          class="bar"
          style="width: 8.2%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Los Angeles
        </div>
        <div
          class="value"
        >
          6.5%
        </div>
        <div
          class="bar"
          style="width: 6.5%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Washington
        </div>
        <div
          class="value"
        >
          6.4%
        </div>
        <div
          class="bar"
          style="width: 6.4%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Houston
        </div>
        <div
          class="value"
        >
          5.2%
        </div>
        <div
          class="bar"
          style="width: 5.2%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Seattle
        </div>
        <div
          class="value"
        >
          5.2%
        </div>
        <div
          class="bar"
          style="width: 5.2%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          San Jose
        </div>
        <div
          class="value"
        >
          3.6%
        </div>
        <div
          class="bar"
          style="width: 3.6%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Boston
        </div>
        <div
          class="value"
        >
          3.6%
        </div>
        <div
          class="bar"
          style="width: 3.6%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Miami
        </div>
        <div
          class="value"
        >
          3.4%
        </div>
        <div
          class="bar"
          style="width: 3.4%;"
        />
      </div>
      <div
        class="bin"
      >
        <div
          class="label"
        >
          Reston
        </div>
        <div
          class="value"
        >
          3.4%
        </div>
        <div
          class="bar"
          style="width: 3.4%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopCitiesRealtime when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <figure
    class="loading"
    data-refresh="15"
    data-source="http://www.example.com/data//top-cities-realtime.json"
    id="chart_top-cities-90-days"
  >
    <div
      class="data bar-chart"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopCitiesRealtime when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <figure
    class="error"
    data-refresh="15"
    data-source="http://www.example.com/data//top-cities-realtime.json"
    id="chart_top-cities-90-days"
  >
    <div
      class="data bar-chart"
    />
  </figure>
</DocumentFragment>
`;
